product_docs/docs/bart/2.6.1/bart_inst/02_installing_bart.mdx
---
title: "Installing BART"
---

<div id="installing_bart" class="registered_link"></div>


This section will walk you through performing a fresh installation of BART on a host. Installation instructions are organized into the following platform/installer specific sections:

-   [Installing BART on a CentOS or RHEL Host](#installing_bart_using_an_rpm_package)
-   [Installing BART on a Debian or Ubuntu Host](#installing_bart_on_a_debian_or_ubuntu_host)
-   [Installing BART on an SLES 12 Host](#installing_bart_on_an_sles_12_host)

<div class="note">

<div class="title">

Note

</div>

If you are using the pdf version of this document, using cut/paste to copy command may result in extra spaces or carriage returns in the pasted command. If a command fails, check the command carefully for additional characters.

</div>

<div id="installing_bart_using_an_rpm_package" class="registered_link"></div>

## Installing BART on a CentOS Host

The following section demonstrates installing BART on a CentOS host using an RPM package.  This section assumes that the user has some knowledge of installation and system administration procedures, and has administrative privileges on the host.

1.  To install the repository configuration, assume superuser privileges and invoke one of the following platform-specific commands:

    On CentOS 6 and 7:

    ``` text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

    On CentOS 8:

    ``` text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace the `USERNAME:PASSWORD` in the following command with the username and password of a registered EnterpriseDB user:

    ``` text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

    To request credentials for the repository, visit the [EDB website](https://www.enterprisedb.com/user).

3.  Before installing BART, execute the following command to install the Extra Packages for Enterprise Linux (EPEL) release package:

    On CentOS 6:

    ``` text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-6.noarch.rpm
    ```

    ``` text
    sed -i "s@^#baseurl=@baseurl=@;s@^mirrorlist=@#mirrorlist=@" /etc/yum.repos.d/epel.repo
    ```

    On CentOS 6, you need to install SCL repository:

    ``` text
    yum -y install centos-release-scl
    ```

    On CentOS 7:

    ``` text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

    On CentOS 8:

    ``` text
    dnf -y install epel-release
    ```

4.  For CentOS 8, enable the PowerTools repository to satisfy EPEL package dependencies:

    ``` text
    dnf config-manager --set-enabled PowerTools
    ```

5.  For CentOS 8, disable the built-in PostgreSQL module:

    ``` text
    dnf -qy module disable postgresql
    ```

6.  Optionally, install the `pg_basebackup` utility program using the server client package. If you do not already have the `pg_basebackup` program installed on the BART host, you can install a limited number of files that include the `pg_basebackup` program by invoking the following command:

    On CentOS 6 and 7:

    ``` text
    yum install edb-as<xx>-server-client
    ```

    On CentOS 8:

    ``` text
    dnf install edb-as<xx>-server-client
    ```

    In the above command, replace `<xx>` with the required Advanced Server version. The `pg_basebackup` version must be the same or more recent than the database server to be backed up. For example, `pg_basebackup` version 10 can be used to back up database server version 10, but cannot be used to back up database server version 11.

7.  Use the following command to install BART:

    On CentOS 6 and 7:

    ``` text
    yum -y install edb-bart
    ```

    On CentOS 8:

    ``` text
    dnf -y install edb-bart
    ```

    Repeat the installation process described in this section to install BART on each remote host on which an incremental backup is to be restored.

    To verify the BART installation, navigate to the `/usr/edb/bart/bin` directory and execute the following command:

    ``` text
    bart --version
    ```

    The `bart --version` command should return the current BART version. If the `bart --version` command returns an error stating the PATH is not available after switching from the root user to another BART user account, adjust the setting of the `PATH` environment variable to include the directory location of the BART `bin` subdirectory in the `~/.bashrc` or `~/.bash_profile` files of the following user accounts:

    -   The BART user account on the BART host. See [Configuring BART](#path) for details.
    -   The remote user account on the remote host to which incremental backups are to be restored. For details, see the *EDB Backup and Recovery User Guide* available at the [EDB website](https://www.enterprisedb.com/edb-docs/).

    Upon successful installation, BART is installed in the `BART_HOME` directory:

    > `/usr/edb/bart`

    The installation includes the following files:

<table><colgroup><col style="width: 31%" /><col style="width: 22%" /><col style="width: 45%" /></colgroup><tbody><tr class="odd"><td>File Name</td><td><blockquote><p>Location</p></blockquote></td><td>Description</td></tr><tr class="even"><td><code>bart</code></td><td><code>&lt;BART_HOME&gt;/bin</code></td><td>BART command line, executable program</td></tr><tr class="odd"><td><code>bart-scanner</code></td><td><code>&lt;BART_HOME&gt;/bin</code></td><td>BART WAL scanner program</td></tr><tr class="even"><td><code>bart.cfg.sample</code></td><td><code>&lt;BART_HOME&gt;/etc</code></td><td>Sample BART configuration file</td></tr><tr class="odd"><td><code>xlogreader_ident.so</code></td><td><code>&lt;BART_HOME&gt;/lib</code></td><td>Libraries supporting WAL versions</td></tr><tr class="even"><td><code>bart_license.txt</code></td><td><code>&lt;BART_HOME&gt;</code></td><td>License agreement</td></tr></tbody></table>

After BART is installed successfully, you need to [configure the installation](#configuration).

<div id="installing_on_rhel" class="registered_link"></div>

## Installing BART on a RHEL Host

The following section demonstrates installing BART on a RHEL host using an RPM package.  This section assumes that the user has some knowledge of installation and system administration procedures, and has administrative privileges on the host.

1.  To install the repository configuration, assume superuser privileges and invoke one of the following platform-specific commands:

    On RHEL 6 and 7:

    ``` text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

    On RHEL 8:

    ``` text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace the `USERNAME:PASSWORD` in the following command with the username and password of a registered EnterpriseDB user:

    ``` text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

    To request credentials for the repository, visit the [EDB website](https://www.enterprisedb.com/user).

3.  Before installing BART, execute the following command to install the Extra Packages for Enterprise Linux (EPEL) release package:

    On RHEL 6:

    ``` text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-6.noarch.rpm
    ```

    ``` text
    sed -i "s@^#baseurl=@baseurl=@;s@^mirrorlist=@#mirrorlist=@" /etc/yum.repos.d/epel.repo
    ```

    On RHEL 6, you need to install SCL repository:

    ``` text
    yum -y install centos-release-scl
    ```

    On RHEL 7:

    ``` text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

    On RHEL 8:

    ``` text
    dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
    ```

4.  Enable the repository:

    On RHEL 7, enable the `optional, extras`, and `HA` repositories to satisfy EPEL package dependencies:

    ``` text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

    On RHEL 8, enable the `codeready-builder-for-rhel-8-*-rpms` repository to satisfy EPEL packages dependency:

    ``` text
    ARCH=$( /bin/arch )

    subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
    ```

5.  For RHEL 8, disable the built-in PostgreSQL module:

    ``` text
    dnf -qy module disable postgresql
    ```

6.  Optionally, install the `pg_basebackup` utility program using the server client package. If you do not already have the `pg_basebackup` program installed on the BART host, you can install a limited number of files that include the `pg_basebackup` program by invoking the following command:

    On RHEL 6 and 7:

    ``` text
    yum install edb-as<xx>-server-client
    ```

    On RHEL 8:

    ``` text
    dnf install edb-as<xx>-server-client
    ```

    In the above command, replace `<xx>` with the required Advanced Server version. The `pg_basebackup` version must be the same or more recent than the database server to be backed up. For example, `pg_basebackup` version 10 can be used to back up database server version 10, but cannot be used to back up database server version 11.

7.  Use the following command to install the BART:

    On RHEL 6 and 7:

    ``` text
    yum -y install edb-bart
    ```

    On RHEL 8:

    ``` text
    dnf -y install edb-bart
    ```

    Repeat the installation process described in this section to install BART on each remote host on which an incremental backup is to be restored.

    To verify the BART installation, navigate to the `/usr/edb/bart/bin` directory and execute the following command:

    ``` text
    bart --version
    ```

    The `bart --version` command should return the current BART version. If the `bart --version` command returns an error stating the PATH is not available after switching from the root user to another BART user account, adjust the setting of the `PATH` environment variable to include the directory location of the BART `bin` subdirectory in the `~/.bashrc` or `~/.bash_profile` files of the following user accounts:

    -   The BART user account on the BART host. See [Configuring BART](#path) for details.
    -   The remote user account on the remote host to which incremental backups are to be restored. For details, see the *EDB Backup and Recovery User Guide* available at the [EDB website](https://www.enterprisedb.com/edb-docs/).

    Upon successful installation, BART is installed in the `BART_HOME` directory:

    `/usr/edb/bart`

    The installation includes the following files:

> <table><colgroup><col style="width: 31%" /><col style="width: 22%" /><col style="width: 45%" /></colgroup><tbody><tr class="odd"><td>File Name</td><td><blockquote><p>Location</p></blockquote></td><td>Description</td></tr><tr class="even"><td><code>bart</code></td><td><code>&lt;BART_HOME&gt;/bin</code></td><td>BART command line, executable program</td></tr><tr class="odd"><td><code>bart-scanner</code></td><td><code>&lt;BART_HOME&gt;/bin</code></td><td>BART WAL scanner program</td></tr><tr class="even"><td><code>bart.cfg.sample</code></td><td><code>&lt;BART_HOME&gt;/etc</code></td><td>Sample BART configuration file</td></tr><tr class="odd"><td><code>xlogreader_ident.so</code></td><td><code>&lt;BART_HOME&gt;/lib</code></td><td>Libraries supporting WAL versions</td></tr><tr class="even"><td><code>bart_license.txt</code></td><td><code>&lt;BART_HOME&gt;</code></td><td>License agreement</td></tr></tbody></table>
>
> After BART is installed successfully, you need to [configure the installation](#configuration).

<div id="installing_ppcle" class="registered_link"></div>

## Installing BART on a RHEL/CentOS 7 PPCLE Host

The following section demonstrates installing BART on a RHEL host using an RPM package.  This section assumes that the user has some knowledge of installation and system administration procedures, and has administrative privileges on the host.

1.  Install Advance Toolchain:

    ``` text
    rpm --import https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7/gpg-pubkey-6976a827-5164221b

    cat > /etc/yum.repos.d/advance-toolchain.repo <<EOF

    # Beginning of the configuration file
    [advance-toolchain]
    name=Advance Toolchain IBM FTP
    baseurl=https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7
    failovermethod=priority
    enabled=1
    gpgcheck=1
    gpgkey=ftp://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHELX/gpg-pubkey-6976a827-5164221b
    # End of the configuration file
    ```

2.  To install the repository configuration, assume superuser privileges and invoke the following command:

    ``` text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

3.  Replace the `USERNAME:PASSWORD` in the following command with the username and password of a registered EnterpriseDB user:

    ``` text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

    To request credentials for the repository, visit the [EDB website](https://www.enterprisedb.com/user).

4.  Before installing BART, execute the following command to install the Extra Packages for Enterprise Linux (EPEL) release package:

    ``` text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

5.  On RHEL 7, enable the `optional, extras`, and `HA` repositories to satisfy EPEL package dependencies:

    ``` text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

6.  Invoke the following command to install BART:

    ``` text
    yum -y install edb-bart
    ```

<div id="installing_bart_on_a_debian_or_ubuntu_host" class="registered_link"></div>

## Installing BART on a Debian or Ubuntu Host

Perform the following steps to install a Debian package using the EnterpriseDB apt repository.

To request credentials for the repository, visit the [EDB website](https://www.enterprisedb.com/repository-access-request).

1.  Assume the superuser privileges.

    ``` text
    sudo su -
    ```

2.  To configure the EnterpriseDB repository on Debian 9, Ubuntu 18, and Ubuntu 20:

    ``` text
    sh -c 'echo "deb https://username:password@apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    ```

    On Debian 10:

    1.  Set up the EnterpriseDB repository:

    ``` text
    sh -c 'echo "deb [arch=amd64] https://apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    ```

    1.  Substitute your EnterpriseDB credentials for the `username` and `password` placeholders in the following command:

    ``` text
    sh -c 'echo "machine apt.enterprisedb.com login <username> password <password>" > /etc/apt/auth.conf.d/edb.conf'
    ```

3.  Add support to your system for secure APT repositories.

    ``` text
    apt-get install apt-transport-https
    ```

4.  Add the EDB signing key; When invoking the command, replace the `username` and `password` with the credentials provided by EnterpriseDB.

    ``` text
    wget -q -O - https://apt.enterprisedb.com/edb-deb.gpg.key | apt-key add –
    ```

5.  Update the repository metadata.

    ``` text
    apt-get update
    ```

6.  Install the Debian package.

    ``` text
    apt-get install edb-bart
    ```

<div id="installing_bart_on_an_sles_12_host" class="registered_link"></div>

## Installing BART on an SLES 12 Host

This section provides instructions for installing BART on an SLES 12 SP4 host using the zypper package manager. BART is supported on SLES SP4 and SP5 versions.

1.  Assume superuser privileges.

    ``` text
    sudo su -
    ```

2.  Use the following command to add the EDB repository to your SLES host:

    ``` text
    zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo
    ```

3.  Invoke the following command to refresh the metadata:

    ``` text
    zypper refresh
    ```

4.  Install `SUSEConnect` to register the host with SUSE to allow access to SUSE repositories:

    ``` text
    zypper install SUSEConnect
    ```

5.  Register the host with SUSE to allow access to SUSE repositories and replace `'REGISTRATION_CODE'` and `'EMAIL'` with your SUSE registration information:

    ``` text
    SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'
    ```

    ``` text
    SUSEConnect -p PackageHub/12.4/x86_64
    ```

    ``` text
    SUSEConnect -p sle-sdk/12.4/x86_64
    ```

6.  Install the following repository for PEM dependencies:

    ``` text
    zypper addrepo https://download.opensuse.org/repositories/Apache:/Modules/SLE_12_SP4/Apache:Modules.repo
    ```

7.  Refresh the metadata:

    ``` text
    zypper refresh
    ```

8.  Then, use the zypper utility to install BART:

    ``` text
    zypper -n install edb-bart
    ```
